--- a/src/scss/ui-kit/_card.scss
+++ b/src/scss/ui-kit/_card.scss
@@ -6,13 +6,17 @@
   background-color: var(--color-white);
   box-shadow      : 8px 8px 4px var(--color-black-20);
   border-radius   : 16px;
-  transition      : box-shadow 0.2s ease;
+  transition      : box-shadow 0.2s ease, transform 0.1s ease;
   overflow        : hidden;
 
   &-content {
     display       : flex;
     flex-direction: column;
     flex-grow     : 1;
+  }
+
+  &:active {
+    transform: translateY(4px);
   }
 
   @media(hover) {
