--- a/src/scss/frontend/_main.scss
+++ b/src/scss/frontend/_main.scss
@@ -120,3 +120,93 @@
     }
   }
 }
+
+// Новости
+.news {
+  &-slide:nth-child(odd) {
+    --news-color: var(--color-black);
+    --news-bg   : var(--color-grey);
+  }
+
+  &-slide:nth-child(even) {
+    --news-color: var(--color-white);
+    --news-bg   : var(--color-black);
+  }
+
+  &__card {
+    color           : var(--news-color);
+    background-color: var(--news-bg);
+  }
+
+  &__pack {
+    &::before {
+      padding-top: 55%;
+    }
+  }
+
+  &__blur {
+    position  : absolute;
+    inset     : 0;
+    background: linear-gradient(180deg, var(--color-none) 69.21%, var(--news-bg) 100%);
+    z-index   : 2;
+  }
+
+  @media(hover) {
+    &__card:hover &__image {
+      transform: scale(1.1);
+    }
+  }
+
+  @media(min-width: 2000px) {
+    &-swiper {
+      overflow: hidden;
+    }
+  }
+}
+
+// Детальная новости
+.news-detail {
+  &__blur {
+    &::after {
+      content         : "";
+      position        : absolute;
+      left            : 0;
+      right           : 0;
+      bottom          : 0;
+      width           : 100%;
+      height          : 390px;
+      background-image: linear-gradient(0deg, var(--color-white) 0%, var(--color-none) 68.26%);
+      pointer-events  : none;
+    }
+  }
+
+  &__content {
+    height: 800px;
+  }
+
+  @media(hover) {
+    &__card:hover &__image {
+      transform: scale(1.1);
+    }
+  }
+
+  @media(max-width: $lg) {
+    &__blur {
+      &::after {
+        height: 250px;
+      }
+    }
+  }
+
+  @media(max-width: $md) {
+    &__blur {
+      &::after {
+        display: none;
+      }
+    }
+
+    &__content {
+      height: auto;
+    }
+  }
+}
