--- a/src/scss/ui-kit/_body.scss
+++ b/src/scss/ui-kit/_body.scss
@@ -30,6 +30,11 @@ body {
       background-color: var(--color-black);
     }
 
+    & .news__card {
+      --news-color: var(--color-black);
+      --news-bg   : var(--color-grey);
+    }
+
     & .footer {
       background: var(--color-black);
     }
