--- a/src/scss/ui-kit/_card.scss
+++ b/src/scss/ui-kit/_card.scss
@@ -15,9 +15,17 @@
     flex-grow     : 1;
   }
 
+  &-arrow {
+    transition: 0.3s;
+  }
+
   @media(hover) {
     &:hover {
       box-shadow: 6px 6px 4px var(--color-black-30);
+    }
+
+    &:hover &-arrow {
+      transform: scale(1.3) translate(4px, -4px);
     }
   }
 }
