--- a/src/scss/ui-kit/_custom.scss
+++ b/src/scss/ui-kit/_custom.scss
@@ -40,8 +40,8 @@
     &>.carousel__button.is-close {
       top             : 8px;
       right           : 8px;
-      color           : var(--color-black);
-      background-color: var(--color-white);
+      color           : var(--color-white);
+      background-color: var(--color-black-50);
       box-shadow      : 0 4px 8px var(--color-black-10);
     }
   }
