--- a/src/scss/frontend/_main.scss
+++ b/src/scss/frontend/_main.scss
@@ -182,6 +182,36 @@
 
   &__content {
     height: 800px;
+
+    scrollbar: {
+      width: thin;
+      color: var(--color-black-50) var(--color-white);
+    }
+
+    &::-webkit-scrollbar {
+      @media(pointer: fine) {
+        width: 16px;
+
+        &-track {
+          background-color: var(--color-white);
+        }
+
+        &-thumb {
+          background-color: var(--color-black-50);
+
+          border: {
+            width : 4px;
+            style : solid;
+            color : var(--color-white);
+            radius: 8px;
+          }
+        }
+
+        &-corner {
+          background-color: var(--color-white);
+        }
+      }
+    }
   }
 
   @media(hover) {
