--- a/src/scss/frontend/_main.scss
+++ b/src/scss/frontend/_main.scss
@@ -185,7 +185,7 @@
 
     scrollbar: {
       width: thin;
-      color: var(--color-black-50) var(--color-white);
+      color: var(--color-gray-dark) var(--color-white);
     }
 
     &::-webkit-scrollbar {
@@ -197,7 +197,7 @@
         }
 
         &-thumb {
-          background-color: var(--color-black-50);
+          background-color: var(--color-gray-dark);
 
           border: {
             width : 4px;
