--- a/src/scss/ui-kit/_custom.scss
+++ b/src/scss/ui-kit/_custom.scss
@@ -41,7 +41,7 @@
       top             : 8px;
       right           : 8px;
       color           : var(--color-white);
-      background-color: var(--color-black-50);
+      background-color: var(--color-gray-dark);
       box-shadow      : 0 4px 8px var(--color-black-10);
     }
   }
