--- a/src/includes/footer.html
+++ b/src/includes/footer.html
@@ -13,7 +13,7 @@
     
   <!-- Подвал -->
 
-  <footer class="footer container container--sm relative bg-blue overflow-hidden pt-10" data-theme="light">
+  <footer class="footer container container--sm relative bg-blue overflow-hidden py-10" data-theme="light">
     <div class="bg-block fade-20">
       <div class="pack pack--rect w-100 h-100">
         <picture>
@@ -60,7 +60,7 @@
         <a class="btn btn--second link color-white text text--uppercase bold-7 radius-1 w-max" data-waved href="mailto: info@seafoodexpoeurasia.COM">info@seafoodexpoeurasia.COM</a>
       </div>
       <div class="flex flex-column order-4 w-100 w-md-auto">
-        <a class="btn btn--second text-50 radius-2 w-max p-2" data-waved href="">
+        <a class="btn btn--second text-50 radius-2 w-max p-2 mb-5" data-waved href="">
           <div class="pack pack--box icon zoom-2">
             <picture>
               <source srcset="img/pictures/sed.webp" type="image/webp">
@@ -68,6 +68,23 @@
             </picture>
           </div>
         </a>
+        <div class="flex align-center gap-1 mt-auto">
+          <a class="btn btn--second color-white text-34 radius-2 p-1" data-waved href="" target="_blank">
+            <svg class="icon">
+              <use xlink:href="img/icons.svg#inst">
+            </svg>
+          </a>
+          <a class="btn btn--second color-white text-34 radius-2 p-1" data-waved href="" target="_blank">
+            <svg class="icon">
+              <use xlink:href="img/icons.svg#fb">
+            </svg>
+          </a>
+          <a class="btn btn--second color-white text-34 radius-2 p-1" data-waved href="" target="_blank">
+            <svg class="icon">
+              <use xlink:href="img/icons.svg#in">
+            </svg>
+          </a>
+        </div>
       </div>
     </div>
   </footer>
