--- a/src/includes/footer.html
+++ b/src/includes/footer.html
@@ -71,6 +71,11 @@
         <div class="flex align-center gap-1 mt-auto">
           <a class="btn btn--second color-white text-34 radius-2 p-1" data-waved href="" target="_blank">
             <svg class="icon">
+              <use xlink:href="img/icons.svg#tw">
+            </svg>
+          </a>
+          <a class="btn btn--second color-white text-34 radius-2 p-1" data-waved href="" target="_blank">
+            <svg class="icon">
               <use xlink:href="img/icons.svg#inst">
             </svg>
           </a>
