--- a/src/includes/header.html
+++ b/src/includes/header.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta http-equiv="autor" content="Студия КИТ"> 
+  <meta http-equiv="autor" content="//STD KIT"> 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
@@ -35,29 +35,25 @@
       </picture>
     </a>
     <nav class="d-none d-lg-flex align-center justify-between gap-5 mx-auto">
-      <a class="btn btn--second link color-black bold-4 radius-2 py-2 px-3" data-waved data-scroll="top" href="#about">About Event</a>
-      <a class="btn btn--second link color-black bold-4 radius-2 py-2 px-3" data-waved data-scroll="top" href="#exhibit">Exhibit</a>
-      <a class="btn btn--second link color-black bold-4 radius-2 py-2 px-3" data-waved data-scroll="top" href="#visit">Visit</a>
-      <a class="btn btn--second link color-black bold-4 radius-2 py-2 px-3" data-waved data-scroll="top" href="#contacts">Contacts</a>
+      <a class="btn btn--second link color-black bold-4 radius-2 py-2 px-3" data-waved data-scroll="top" href="#about">Etkinlik Hakkında</a>
+      <a class="btn btn--second link color-black bold-4 radius-2 py-2 px-3" data-waved data-scroll="top" href="#exhibit">Fuar</a>
+      <a class="btn btn--second link color-black bold-4 radius-2 py-2 px-3" data-waved data-scroll="top" href="#visit">Ziyaret</a>
+      <a class="btn btn--second link color-black bold-4 radius-2 py-2 px-3" data-waved data-scroll="top" href="#contacts">İletişim</a>
     </nav>
     <a class="d-none d-md-flex btn btn--second color-black bold-8 radius-2 p-2" data-waved href="tel: + 90 216 922 02 13">+ 90 216 922 02 13</a>
     <div class="header__accordion relative" data-accordion="hidden" data-accordion-close="scroll">
       <button class="btn btn--primary radius-1 p-2" data-waved data-accordion-toggle>
-        <img class="icon text-24 mr-2" src="img/pictures/en.svg" alt="">
+        <img class="icon text-24 mr-2" src="img/pictures/turk.svg" alt="">
         <svg class="header__arrow icon color-black text-10 fade-60 ease duration-3">
           <use xlink:href="img/icons.svg#arrow">
         </svg>
       </button>
       <div class="header__content absolute" data-accordion-content>
         <div class="flex flex-column bg-white radius-4 p-3">
-          <button class="btn btn--second justify-start radius-2 w-100 py-2 px-3">
+          <a class="btn btn--second justify-start radius-2 w-100 py-2 px-3" data-waved href="">
             <img class="icon text-24 mr-2" src="img/pictures/en.svg" alt="">
             <span class="color-black text-16 bold-4">en</span>
-          </button>
-          <button class="btn btn--second justify-start radius-2 w-100 py-2 px-3">
-            <img class="icon text-24 mr-2" src="img/pictures/turk.svg" alt="">
-            <span class="color-black text-16 bold-4">tr</span>
-          </button>
+          </a>
         </div>
       </div>
     </div>
@@ -83,10 +79,10 @@
         <input class="switch switch--toggle" data-theme="toggle" type="checkbox">
       </div>
       <div class="mobile__nav flex flex-column gap-6 relative color-white mb-10 px-4 py-7 ease duration-9 delay-5">
-        <a class="font-alt link text-24 bold-5 w-max" data-scroll="top" href="#about">About Event</a>
-        <a class="font-alt link text-24 bold-5 w-max" data-scroll="top" href="#exhibit">Exhibit</a>
-        <a class="font-alt link text-24 bold-5 w-max" data-scroll="top" href="#visit">Visit</a>
-        <a class="font-alt link text-24 bold-5 w-max" data-scroll="top" href="#contacts">Contacts</a>
+        <a class="font-alt link text-24 bold-5 w-max" data-scroll="top" href="#about">Etkinlik Hakkında</a>
+        <a class="font-alt link text-24 bold-5 w-max" data-scroll="top" href="#exhibit">Fuar</a>
+        <a class="font-alt link text-24 bold-5 w-max" data-scroll="top" href="#visit">Ziyaret</a>
+        <a class="font-alt link text-24 bold-5 w-max" data-scroll="top" href="#contacts">İletişim</a>
       </div>
       <div class="mobile__footer relative mt-auto px-4 pt-4 pb-10 ease duration-5 delay-9">
         <div class="flex flex-column mb-5">
