--- a/src/includes/footer.html
+++ b/src/includes/footer.html
@@ -30,26 +30,27 @@
             <img class="w-100" src="img/pictures/logo-white.png" alt="">
           </picture>
         </a>
-        <p class="text-16 bold-4 mb-3">Istanbul, Tuyap</p>
-        <p class="text-16 bold-4 mb-5 mb-md-10">December 7-9, 2023</p>
+        <p class="text-16 bold-4 mb-3">Istanbul</p>
+        <p class="text-16 bold-4 mb-5 mb-md-10">7-9 ARALIK 2023</p>
         <p class="text-14 bold-4 lh-5 fade-60 mb-7 mb-md-10">
-          Seafood Expo Eurasia is a new international <br class="d-none d-md-block">
-          exhibition for companies involved in fishery, <br class="d-none d-md-block">
-          aquaculture, processing and shipbuilding sectors
+          Seafood Expo Eurasia, balıkçılık, su ürünleri, <br class="d-none d-md-block">
+          balık işleme vegemi inşaatı sektörlerinde faaliyet <br class="d-none d-md-block">
+          gösteren şirketler için tasarlanmış yeni <br class="d-none d-md-block">
+          uluslararası bir etkinliktir.
         </p>
         <p class="text-14 bold-6">© 2023 SED Fuarcılık Limited Şirketi</p>
       </div>
       <div class="flex flex-column order-2 order-md-3 order-lg-2 w-100 w-md-auto">
-        <h3 class="text text--uppercase text-18 text-md-20 text-lg-22 bold-7 mb-6">Navigation</h3>
+        <h3 class="text text--uppercase text-18 text-md-20 text-lg-22 bold-7 mb-6">YÖN BULMA</h3>
         <nav class="flex flex-column gap-4">
-          <a class="btn btn--second link radius-1 color-white bold-4 w-max p-1" data-waved data-scroll="top" href="#about">About Event</a>
-          <a class="btn btn--second link radius-1 color-white bold-4 w-max p-1" data-waved data-scroll="top" href="#exhibit">Exhibit</a>
-          <a class="btn btn--second link radius-1 color-white bold-4 w-max p-1" data-waved data-scroll="top" href="#visit">Visit</a>
-          <a class="btn btn--second link radius-1 color-white bold-4 w-max p-1" data-waved data-scroll="top" href="#contacts">Contacts</a>
+          <a class="btn btn--second link radius-1 color-white bold-4 w-max p-1" data-waved data-scroll="top" href="#about">Etkinlik Hakkında</a>
+          <a class="btn btn--second link radius-1 color-white bold-4 w-max p-1" data-waved data-scroll="top" href="#exhibit">Fuar</a>
+          <a class="btn btn--second link radius-1 color-white bold-4 w-max p-1" data-waved data-scroll="top" href="#visit">Ziyaret</a>
+          <a class="btn btn--second link radius-1 color-white bold-4 w-max p-1" data-waved data-scroll="top" href="#contacts">İletişim</a>
         </nav>
       </div>
       <div class="flex flex-column order-3 order-md-2 order-lg-3 w-100 w-md-auto">
-        <h3 class="text text--uppercase text-18 text-md-20 text-lg-22 bold-7 mb-6">contacts</h3>
+        <h3 class="text text--uppercase text-18 text-md-20 text-lg-22 bold-7 mb-6">İletişim</h3>
         <p class="text text--uppercase text-16 bold-3 mb-5">SED Fuarcılık Limited Şirketi</p>
         <a class="btn btn--second link-wrapper radius-1 color-white w-max mb-5" data-waved href="tel: + 90 216 922 02 13">
           <svg class="icon text-22 text-lg-26 mr-2">
