--- a/src/includes/footer.html
+++ b/src/includes/footer.html
@@ -70,22 +70,22 @@
           </div>
         </a>
         <div class="flex align-center gap-1 mt-auto">
-          <a class="btn btn--second color-white text-34 radius-2 p-1" data-waved href="" target="_blank">
+          <a class="btn btn--second footer-social-link color-white text-34 radius-2 p-1" data-waved href="" target="_blank">
             <svg class="icon">
               <use xlink:href="img/icons.svg#inst">
             </svg>
           </a>
-          <a class="btn btn--second color-white text-34 radius-2 p-1" data-waved href="" target="_blank">
+          <a class="btn btn--second footer-social-link color-white text-34 radius-2 p-1" data-waved href="" target="_blank">
             <svg class="icon">
               <use xlink:href="img/icons.svg#tw">
             </svg>
           </a>
-          <a class="btn btn--second color-white text-34 radius-2 p-1" data-waved href="" target="_blank">
+          <a class="btn btn--second footer-social-link color-white text-34 radius-2 p-1" data-waved href="" target="_blank">
             <svg class="icon">
               <use xlink:href="img/icons.svg#in">
             </svg>
           </a>
-          <a class="btn btn--second color-white text-34 radius-2 p-1" data-waved href="" target="_blank">
+          <a class="btn btn--second footer-social-link color-white text-34 radius-2 p-1" data-waved href="" target="_blank">
             <svg class="icon">
               <use xlink:href="img/icons.svg#fb">
             </svg>
