--- a/src/includes/footer.html
+++ b/src/includes/footer.html
@@ -95,5 +95,22 @@
     </div>
   </footer>
 
+  <!-- Куки -->
+
+  <section class="cookie container fixed zi-7 pt-0 pb-4" id="cookie">
+    <div class="card p-4 p-md-7 p-lg-10">
+      <div class="card-content">
+        <h2 class="font-alt text text--uppercase text-26 text-md-30 text-lg-34 bold-7 lh-3 mb-4">Notice</h2>
+        <p class="text text-14 text-md-18 tex-lg-22 bold-4 lh-5 mb-5 mb-md-7">
+          We and selected third parties use cookies or similar technologies for technical purposes and, with your consent, for other purposes as specified in <span class="color-primary link text text--underline" data-fancybox-dialog data-type="ajax" data-src="dialogs/dialog-cookie.html">the cookie policy</span>. Denying consent may make related features unavailable.
+        </p>
+        <div class="cookie__btns flex align-center gap-2 gap-md-5">
+          <button class="cookie__btn btn btn--primary btn--lg btn--fill w-100" data-waved data-cookie-button>Accept</button>
+          <button class="cookie__btn btn btn--primary btn--lg btn--contur w-100" data-waved data-fancybox-dialog data-type="ajax" data-src="dialogs/dialog-cookie.html">Learn more</button>
+        </div>
+      </div>
+    </div>
+  </section>
+
 </body>
 </html>
