--- a/src/scss/frontend/_main.scss
+++ b/src/scss/frontend/_main.scss
@@ -236,3 +236,25 @@
     }
   }
 }
+
+// Куки
+.cookie {
+  bottom: 0;
+  left: 0;
+  right: 0;
+
+  &__btn {
+    max-width: 170px;
+  }
+
+  @media(max-width: $md) {
+    &__btns {
+      flex-direction: column;
+      align-items: stretch;
+    }
+
+    &__btn {
+      max-width: 100%;
+    }
+  }
+}
