--- a/src/includes/footer.html
+++ b/src/includes/footer.html
@@ -97,7 +97,7 @@
 
   <!-- Куки -->
 
-  <section class="cookie container fixed zi-7 pt-0 pb-4" id="cookie">
+  <section class="cookie container fixed zi-7 pt-0 pb-4" data-cookie="tr" data-path="/" id="cookie">
     <div class="card p-4 p-md-7 p-lg-10">
       <div class="card-content">
         <h2 class="font-alt text text--uppercase text-26 text-md-30 text-lg-34 bold-7 lh-3 mb-4">Notice</h2>
